--- a/TicTacToe/TicTacToe.vcxproj
+++ b/TicTacToe/TicTacToe.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Point2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
